# ctbrowse

./: .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE.md  README.md  cpp.hint  vcpkg.json
.github/workflows/: ci.yml
app/: App.cpp  App.h  CMakeLists.txt  CategorizedControls.h  CtCredentialManager.cpp  CtCredentialManager.h  LabelImageCache.cpp  LabelImageCache.h  LoginEvent.h  MainFrame.cpp  MainFrame.h  PollingTask.h  app_constants.h  cts_win.wxui  cts_win_temp.wxui  json_serialization.h  log.cpp  log.h  tasks.cpp  tasks.h  wx_CredentialManager.cpp  wx_CredentialManager.h  wx_LoginEvent.h  wx_helpers.h
app/controls/: CheckBoxFilterCtrl.cpp  CheckBoxFilterCtrl.h  DetailFields.h  FilterCheckBox.h  LabelImageCtrl.cpp  LabelImageCtrl.h  MultiValueFilterTree.cpp  MultiValueFilterTree.h  MultiValueFilterTreeCtrl.cpp  MultiValueFilterTreeCtrl.h  SortOptionsPanel.cpp  SortOptionsPanel.h  SpinDoubleFilterCtrl.cpp  SpinDoubleFilterCtrl.h  WineDetailFields.h  WineDetailMainPanel.cpp  WineDetailMainPanel.h  WineDetailPendingPanel.cpp  WineDetailPendingPanel.h  WineDetailScorePanel.cpp  WineDetailScorePanel.h  WineDetailTagsPanel.cpp  WineDetailTagsPanel.h  WineDetailTastingPanel.cpp  WineDetailTastingPanel.h  WineDetailValuePanel.cpp  WineDetailValuePanel.h  WineDetailsPanel.cpp  WineDetailsPanel.h
app/dialogs/: CredentialDialog.cpp  CredentialDialog.h  TableSyncDialog.cpp  TableSyncDialog.h
app/grid/: CellarTrackerGrid.cpp  CellarTrackerGrid.h  GridTableEventSource.cpp  GridTableEventSource.h  GridTableFilter.cpp  GridTableFilter.h  GridTableFilterMgr.h  GridTableLoader.cpp  GridTableLoader.h  GridTableSource.cpp  GridTableSource.h  GridTableWineList.cpp  GridTableWineList.h  ScopedEventSink.h
app/grids/: CellarTrackerGrid.cpp  CellarTrackerGrid.h  GridTableBase.h  GridTableMgr.cpp  GridTableMgr.h  GridTableWineList.cpp  GridTableWineList.h
app/interfaces/: DatasetEvent.h  GridTable.h  GridTableEvent.h  GridTableFilter.h  IDataset.h
app/model/: CellarTrackerDataModel.cpp  CellarTrackerDataModel.h  CtDataModel.h  CtDataViewModel.cpp  CtDataViewModel.h  CtDatasetOptions.cpp  CtDatasetOptions.h  CtStringFilter.cpp  CtStringFilter.h  DatasetBase.h  DatasetEvent.h  DatasetEventSource.cpp  DatasetEventSource.h  DatasetLoader.cpp  DatasetLoader.h  DisplayColumn.h  ScopedEventSink.h
app/panels/: GridOptionsPanel.cpp  GridOptionsPanel.h  GridToolsPanel.cpp  GridToolsPanel.h  WineDetailsPanel.cpp  WineDetailsPanel.h
app/resources/: RCa45592  ctBrowse.manifest  resource.rc  utf-8.manifest
app/views/: CellarTrackerGrid.cpp  CellarTrackerGrid.h  CellarTrackerListView.cpp  CellarTrackerListView.h  ColumnLayout.h  DatasetDetailsView.cpp  DatasetDetailsView.h  DatasetListView.cpp  DatasetListView.h  DatasetMultiView.cpp  DatasetMultiView.h  DatasetOptionsPanel.cpp  DatasetOptionsPanel.h  DatasetOptionsView.cpp  DatasetOptionsView.h  DetailsPanel.cpp  DetailsPanel.h  DetailsViewBase.cpp  DetailsViewBase.h  DetailsViewConsumedWine.h  DetailsViewMyCellar.h  DetailsViewPending.h  DetailsViewPurchasedWine.h  DetailsViewReadyToDrink.h  DetailsViewTaggedWine.h  DetailsViewTastingNotes.h  FilterCheckBox.h  GridMultiView.cpp  GridMultiView.h  GridOptionsPanel.cpp  GridOptionsPanel.h  MultiValueFilterTree.cpp  MultiValueFilterTree.h  WineDetailsPanel.cpp
cmake/: add-target.cmake  add_target.cmake  dev-mode.cmake  find-wxrc.cmake  folders.cmake  install-rules.cmake  use-clang-tidy.cmake  variables.cmake
cmake/product-version/: RCa45592  VersionResource.rc
examples/: CMakeLists.txt  download_csv.cpp  download_xml.cpp  notebook.cpp  parse_csv.cpp
include/ctb/: CredentialManager.h  CredentialWrapper.h  CtProperty.h  CtRecordImpl.h  DisplayColumn.h  Error.h  PendingWineTraits.h  PropFilter.h  PropFilterMgrString.h  PropStringFilter.h  PropStringFilterMgr.h  PropertyFilterMgr.h  PropertyFilterNumeric.h  PropertyFilterString.h  SubStringFilter.h  TableProperty.h  TableSorter.h  WineListTraits.h  common_types.h  concepts.h  constants.h  ctb.h  ctb_format.h  functors.h  log.h  nullable_types.h  table_data.h  table_download.h  utility.h  utility_chrono.h  utility_http.h  utility_templates.h  winapi_util.h
include/ctb/data/: ColumnFilter.h  DisplayColumn.h  PropertyFilterMgr.h  PropertyFilterString.h  SearchFilter.h  SubstringFilter.h  TableProperty.h  TableSort.h  TableSorter.h  WineListEntry.h  table_data.h  table_download.h
include/ctb/interfaces/: DatasetEvent.h  IDataset.h  IDatasetEventSink.h  IDatasetEventSource.h
include/ctb/model/: CtDataModel.h  CtDataset.h  CtDatasetLoader.h  CtDisplayColumn.h  CtListColumn.h  (+10 more)
include/cts/: CellarTrackerDownload.h  CredentialWrapper.h  Error.h  concepts.h  constants.h  functors.h  winapi_util.h
include/ctwin/: CellarTrackerDownload.h  CredentialWrapper.h  Error.h  constants.h  environment.h  utility.h  winapi_util.h
lib/: CMakeLists.txt  CellarTrackerDownload.cpp  CredentialManager.cpp  CredentialWrapper.cpp  CtDatasetLoader.cpp  DatasetEventSource.cpp  DatasetLoader.cpp  cp1252_to_UTF8.h  environment.cpp  log.cpp  table_download.cpp  tasks.cpp  utility.cpp  utility_http.cpp  winapi_util.cpp  windows_includes.h
lib/data/: CellarTrackerTables.cpp  WineList.cpp  WineListEntry.cpp  table_download.cpp
scripts/: Run-Build.ps1  Run-Configure.ps1  reset-cache.ps1
scripts/overlay_triplets/: x64-wxwindows-dynamic.cmake  x64-wxwindows-static.cmake
source/: lib.cpp
src/: App.cpp  App.h  CMakeLists.txt  CtGrid.h  CtGridTable.cpp  CtGridTable.h  MainFrame.cpp  MainFrame.h  TableSyncDialog.cpp  TableSyncDialog.h  concepts.h  cts_win.wxui  minimal.cpp  wx_helpers.h
src/art/: images.xrc
src/dialogs/: TableSyncDialog.cpp  TableSyncDialog.h
src/grids/: CellarTrackerGrid.cpp  CellarTrackerGrid.h  CtGridTable.cpp  CtGridTable.h  DisplayColumn.h  GridTableBase.h  GridTableMgr.cpp  GridTableMgr.h  GridTableWineList.cpp  GridTableWineList.h
src/panels/: GridToolsPanel.cpp  GridToolsPanel.h
test/: CMakeLists.txt
test/source/: ctwin_test.cpp
tests/: CMakeLists.txt
(+60 files in other folders)
